# object-detection-project

./: .env  .gitignore  README.md  best_l.pt  best_m.pt  best_n.pt  best_s.pt  best_x.pt  deadlines.txt  main.py  pyproject.toml
docs/: update_1.md  update_1.txt  update_2.md  update_3.md
src/: auto_aim.py  predict.py  train.py
