[project]
name = "object-detection-project"
version = "0.1.0"
description = "Object Detection in Video Data Stream"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "pynput",
    "huggingface-hub",
    "python-dotenv",
    "roboflow",
    "supervision",
    "torch",
    "ultralytics @ git+https://github.com/sunsmarterjie/yolov12.git",
]
